--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,7 +23,13 @@ services:
             - "${PGADMIN_PORT:-5050}:80"
         networks:
             - postgres
-
+    jaeger:
+        image: jaegertracing/all-in-one:1.37.0
+        ports:
+            - "16686:16686"
+            - "14250:14250"
+            - "14268:14268"
+            
     #######################################################
     #  Zookeeper
     #######################################################
