--- a/Core/Core/Core.csproj
+++ b/Core/Core/Core.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="OpenTelemetry.Api" Version="1.4.0-beta.3" />
         <PackageReference Include="Polly" Version="7.2.3" />
         <PackageReference Include="RestSharp" Version="108.0.2" />
+        <PackageReference Include="Scrutor" Version="4.2.0" />
     </ItemGroup>
 
     <ItemGroup>
