--- a/Core/Core.WebApi/Core.WebApi.csproj
+++ b/Core/Core.WebApi/Core.WebApi.csproj
@@ -7,6 +7,12 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.9" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageReference Include="Npgsql.OpenTelemetry" Version="6.0.7" />
+        <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.4.0-beta.3" />
+        <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.4.0-beta.3" />
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc9.9" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.9" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.9" />
     </ItemGroup>
 
     <ItemGroup>
